client/styles.css
html {
    font-size:15px;
}

body {
    height: 100%;
    width: 100%;
    background-image:url(bg.svg);
    font-family: 'Roboto Mono', monospace;
    color: #ffffff;
    line-height:1.6;
    margin: 0;
    padding: 0;
    font-size: 1rem;
}

@media screen and (min-width:768px){
    html {
        font-size:16px;
    }
}

@media screen and (min-width:1200px){
    html {
        font-size:18px;
    }
}

@media screen and (min-width:1600px){
    html {
        font-size:20px;
    }
}

header {
    max-height: 112px;
    background-color: #53bc4a;
}

.header-content {
    height: 100%;
    width: 100%;
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: justify;
    -moz-box-pack: justify;
    -webkit-justify-content: space-between;
    -ms-flex-pack: justify;
    justify-content: space-between;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    white-space: nowrap;
    overflow: hidden;
}

.header-logo {
    width: 80%;
    max-width: 423px;
    margin-left: 5%;
}

.links {
    margin-left: auto;
    margin-right: 5%;
}

.links li {
    display: inline-block;
    box-sizing: border-box;
    position: relative;
    list-style-type: none;
    vertical-align: top;
    padding: 0.75rem;
}

.menu-link {
    color: #ffffff;
    text-decoration: none;
}

.menu-link:hover {
    color: rgb(234, 234, 22);
}

.top-container {
    display: -webkit-box;
    display: -moz-box;
    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;
    -webkit-box-pack: center;
    -moz-box-pack: center;
    -webkit-justify-content: center;
    -ms-flex-pack: center;
    justify-content: center;
    -webkit-box-align: center;
    -moz-box-align: center;
    -webkit-align-items: center;
    -ms-flex-align: center;
    align-items: center;
    -webkit-flex-wrap: wrap-reverse;
    -ms-flex-wrap: wrap-reverse;
    flex-wrap: wrap-reverse;
    width: 90%;
    margin: 0.75rem auto 0 auto;
    padding: 5px;
}

.top-container img {
    margin: 5px;
    max-width: 75%;
}

button {
    font-family: 'Roboto Mono', monospace;
    background:#5764f1 url("Discord-Logo-White.png") no-repeat top left;
    background-size: 71px 80px;
    color: #ffffff;
    font-size:1rem;
    background-color: #5764f1;
    border:none;
    border-radius: 3px;
    margin-top: auto;
    margin-bottom: auto;
    text-align: center;
    padding-left: 71px;
}

button img {
    height: 75%;
}

.centered-text {
    display: block;
    width: 90%;
    padding: 0.75rem;
    margin: 0 auto 2rem auto;
    background-color: #53bc4a;
    text-align: center;
    box-shadow: #1c4d17 0px 7px 5px -6px;
}

.centered-text img {
    display: block;
    margin: 0.75rem auto 0.75rem auto;
}

#splash_img_1 {
    width: 80%;
    max-width: 991px;
}

#splash_img_2 {
    width: 60%;
    max-width: 743px;
}

